--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <h3>Mas como vou decorar os códigos dos emojis?!?</h3>
         <p>Não se preocupe, aqui segue um site com lista de diversos emojis para utilizar: <a
                 href="https://www.webfx.com/tools/emoji-cheat-sheet/" alt="Site com código de emojis"
-                title="Site com códigos para emojis">EMOJIS</a></p>
+                title="Site com códigos para emojis">EMOJIS</a>.</p>
 
         <p>Bem, espero que esse conteúdo lhe ajude de alguma forma! Se puder, compartilhe com mais pessoas. Repasse o conhecimento! Forte abraço e LET's CODE!</p>
     </main>
