--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="img/jpg" href="img/M_title.png">
     <title>Aprendendo Markdown!</title>
-    <link rel="stylesheet" type="css/text" href="">
+    <link rel="stylesheet" type="css/text" href="css/style.css">
 </head>
 
 <body>
