--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="img/jpg" href="img/M_title.png">
     <title>Aprendendo Markdown!</title>
-    <link rel="stylesheet" type="css/text" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body>
-    <!--HEADER_INÍCIO-->
+    <!--HEADER_INÍCIO
     <header id="cabecalho">
-        <h1>Markdown</h1>
-        <h2>Aprendendo a trabalhar com Markdown</h2>
-        <!--NAV_INÍCIO-->
+        <a href="https://daringfireball.net/projects/markdown/"><img src="img/M_title.png" alt="Logo Markdown"
+            title="Markdown"></a>
+        <!--NAV_INÍCIO
         <nav id="social-media">
             <ul>
                 <li><a href="https://www.linkedin.com/in/diegoaugpedro/" target="_blank"><img src="img/Linkedin.png"
@@ -25,13 +25,20 @@
                             src="img/Portifolio.png" title="Clique para acessar meu Web Vitae!"></a></li>
             </ul>
         </nav>
-        <!--NAV_FIM-->
+        <!--NAV_FIM
     </header>
     <!--HEADER_FIM-->
 
     <!--MAIN_INÍCIO-->
     <main id="principal">
-        <p>Estamos aqui para te mostrar as maneiras que o Markdown pode ser utilizado para formatar seu arquivo README.
+        <a href="https://daringfireball.net/projects/markdown/"><img src="img/M_title.png" alt="Logo Markdown"
+                title="Markdown"></a>
+        <h1>Markdown</h1>
+        <h2>Aprendendo a trabalhar com Markdown</h2>
+
+        <p>Estamos aqui para te mostrar as maneiras com as quais o Markdown pode ser utilizado para transformar seu
+            arquivo
+            README em uma incrível referência ao seu projeto.
         </p>
         <h3>Mas afinal, o que é o MARKDOWN?</h3>
         <p>Markdown é uma linguagem de marcação que, basicamente, faz alterações nos textos utilizando símbolos como
@@ -187,17 +194,21 @@
             title="Resultado de bloco de código em Markdown">
 
         <h3>FUGINDO DA ESTILIZAÇÃO</h3>
-        <p>Vimos que os símbolos são utilizados para tratar da estilização do texto, mas como faremos se quisermos mostrar
-            exatamente o símbolo sem seu efeito de formatação? Nesse caso, temos que fazer uso da barra invertida (\) antes do símbolo. Com isso, seu efeito de formatação é "cancelado".</p>
+        <p>Vimos que os símbolos são utilizados para tratar da estilização do texto, mas como faremos se quisermos
+            mostrar
+            exatamente o símbolo sem seu efeito de formatação? Nesse caso, temos que fazer uso da barra invertida (\)
+            antes do símbolo. Com isso, seu efeito de formatação é "cancelado".</p>
         <h5>Exemplo:</h5>
         <img src="img/SemSimb_M.PNG" alt="Texto sem estilização" title="Texto sem estilização"></br>
         <img src="img/SemSimb_R.PNG" alt="Texto sem estilização" title="Texto sem estilização">
 
         <h3>E MAIS...</h3>
 
-        <p>Lá no <a href="githhttps://github.com/" title="Site GitHUB">GITHUB</a>, exato, lá mesmo. Podemos criar checkboxes que utilizamos para montar listas de tarefas além de
+        <p>Lá no <a href="githhttps://github.com/" title="Site GitHUB">GITHUB</a>, exato, lá mesmo. Podemos criar
+            checkboxes que utilizamos para montar listas de tarefas além de
             referências de <em>issues</em> e/ou <em>pull requests</em> utilizando apenas uma "hastag" (#) e o nome da
-            issues / pull request. É possível mencionar usuários nos comentários utilizando o arroba (@). Dá pra utilizar
+            issues / pull request. É possível mencionar usuários nos comentários utilizando o arroba (@). Dá pra
+            utilizar
             até <em>emojis</em>. Também é possível utilizar todos as outras estilizações mostradas
             aqui.</p>
         <h5>Exemplo:</h5>
@@ -208,19 +219,20 @@
                 href="https://www.webfx.com/tools/emoji-cheat-sheet/" alt="Site com código de emojis"
                 title="Site com códigos para emojis">EMOJIS</a>.</p>
 
-        <p>Bem, espero que esse conteúdo lhe ajude de alguma forma! Se puder, compartilhe com mais pessoas. Repasse o conhecimento! Forte abraço e LET's CODE!</p>
+        <p>Bem, espero que esse conteúdo lhe ajude de alguma forma! Se puder, compartilhe com mais pessoas. Repasse o
+            conhecimento! Forte abraço e LET's CODE!</p>
     </main>
     <!--MAIN_FIM-->
 
     <!--FOOTER_FIM-->
     <footer id="rodape">
-        <a href="#top" alt="Para o topo" title="Para o topo"><img src="img/UP.png"></a>
-        Ícones feitos por <a
-            href="https://www.flaticon.com/br/icone-gratis/seta-para-cima_2923177?term=seta%20para%20cima&page=1&position=53"
-            title="Vitaly Gorbachev">Vitaly Gorbachev</a> from <a href="https://www.flaticon.com/br/" title="Flaticon">
-            www.flaticon.com</a>
-        Criado por Diego Augusto Pedro
-        Atualizado em 29/05/2020
+        <a id="topo" href="#top" alt="Para o topo" title="Para o topo"><img src="img/UP.png"></a>
+        <p>Ícones feitos por <a
+                href="https://www.flaticon.com/br/icone-gratis/seta-para-cima_2923177?term=seta%20para%20cima&page=1&position=53"
+                title="Vitaly Gorbachev">Vitaly Gorbachev</a> from <a href="https://www.flaticon.com/br/"
+                title="Flaticon">www.flaticon.com</a></p>
+        <p>Criado por Diego Augusto Pedro</p>
+        <p>Atualizado em 29/05/2020</p>
     </footer>
     <!--FOOTER_FIM-->
 </body>
