--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-    <!--HEADER_INÍCIO
+    <!--HEADER_INÍCIO-->
     <header id="cabecalho">
         <a href="https://daringfireball.net/projects/markdown/"><img src="img/M_title.png" alt="Logo Markdown"
             title="Markdown"></a>
-        <!--NAV_INÍCIO
+        <!--NAV_INÍCIO-->
         <nav id="social-media">
             <ul>
                 <li><a href="https://www.linkedin.com/in/diegoaugpedro/" target="_blank"><img src="img/Linkedin.png"
@@ -25,7 +25,7 @@
                             src="img/Portifolio.png" title="Clique para acessar meu Web Vitae!"></a></li>
             </ul>
         </nav>
-        <!--NAV_FIM
+        <!--NAV_FIM-->
     </header>
     <!--HEADER_FIM-->
 
