--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <!--HEADER_INÍCIO-->>
+    <!--HEADER_INÍCIO-->
     <header id="cabecalho">
         <a href="https://daringfireball.net/projects/markdown/"><img src="img/M_title.png" alt="Logo Markdown"
             title="Markdown"></a>
